ucoz entity_tytle

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
         <div>
           <img src="images/ucoz-page-settings.png" alt="">
         </div>
+        <div class="info">Если вы хотите что б имя файла соответствовало названию материала добавьте в ссылку следующий атрибут: <strong>download_name = "$ENTRY_TITLE$"</strong></div>
       </li>
       <li>в области редактирования перед закрывающим тегом &lt;/body&gt; (1) вставьте этот <a href="files/ucoz.js" target="_blank">текст</a> После нажмите кнопку "Сохранить" (2).
         <div>
