index.html add description

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <div>
           <img src="images/ucoz-page-settings.png" alt="">
         </div>
-        <div class="info">Если вы хотите что б имя файла соответствовало названию материала добавьте в ссылку следующий атрибут: <strong>download_name = "$ENTRY_TITLE$"</strong></div>
+        <div class="info">Если вы хотите что б имя файла соответствовало названию материала добавьте в ссылку следующий атрибут: <strong>download_name="$ENTRY_TITLE$"</strong></div>
       </li>
       <li>в области редактирования перед закрывающим тегом &lt;/body&gt; (1) вставьте этот <a href="files/ucoz.js" target="_blank">текст</a> После нажмите кнопку "Сохранить" (2).
         <div>
@@ -172,10 +172,11 @@
       <li>Ссылка на скачиваемый файл должна иметь следующий вид:
         <div class="code">&lt;a download_url="(1)" download_sid="(2)" class="mi-download-link" ...</div>
         <ul>
-          <li>(1) - прямая ссылка на файл (в ссылке должно присутствовать имя файла).</li>
+          <li>(1) - прямая ссылка на файл (при переходе по этой ссылке начинается скачивание файла). Этот параметр можно не указывать если в href и так находится прямая ссылка на файл.</li>
           <li>(2) - ваш ид в партнерской программе MoneyInst</li>
           <li>обратите внимание что ссылка должна содержать класс "mi-download-link"</li>
         </ul>
+        <div class="info">Для того что б самому задать имя скачиваемого файла добавьте параметр: <strong>download_name="имя_файла"</strong></div>
       </li>
     </ol>
   </div>
