--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </ol>
   </div>
   <div id="joomla">
-    <h3>Установка и настройка плагина WordPress</h3>
+    <h3>Установка и настройка плагина Joomla!</h3>
     <ol>
       <li>Скачайте плагин для нужной версии <a href="files/j/moneyinst.zip">Joomla 3.0</a> или <a href="files/j25/moneyinst.zip">Joomla 2.5</a>
         <div class="warning">Для корректной работы плагина в версии 2.5 необходима библиотека jQuery. Причем, бибилиотека jQuery должна быть обьявлена раньше чем скрипт партнерской программы. Как одни из вариантов, добавьте (либо если у вас уже на сатйе используется jQuery, перенесети свою):
