--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
     </li>
     <li><a href="#univarsal">Универсальный скрипт подмены ссылок</a>
     </li>
-    <li><a href="#univarsal-php">Универсальный скрипт подмены ссылок (PHP)</a>
+    <li><a href="#univarsal-php">Универсальный скрипт подмены ссылок (PHP + Javascript)</a>
+    </li>
+    <li><a href="#univarsal-php-clear">Универсальный скрипт подмены ссылок (PHP)</a>
     </li>
   </ul>
   <div id="wp">
@@ -153,7 +155,7 @@
     <ol>
       <li>Скачайте <a href="files/moneyinst.zip">архив</a>. Распакуйте и загрузите на сервер файл скрипта.</li>
       <li>Добавьте ссылку на скрипт в хеадер вашего сайт.
-        <div class="code">&lt;script src="//путь_к_папке_куда_закачали_файл/moneyinst.js"&gt;&lt;/script&gt;</div>
+        <div class="code">&lt;script src="//путь_к_папке_куда_закачали_скрипт/moneyinst.js"&gt;&lt;/script&gt;</div>
       </li>
       <li>Ссылка на скачиваемый файл должна иметь следующий вид:
         <div class="code">&lt;a download_url="(1)" download_sid="(2)" class="mi-download-link" ...</div>
@@ -167,7 +169,7 @@
     </ol>
   </div>
   <div id="univarsal-php">
-    <h3>Универсальный скрипт для подмены ссылок (PHP)</h3>
+    <h3>Универсальный скрипт для подмены ссылок (PHP + Javascript)</h3>
     <ol>
       <li>Скачайте <a href="files/php/moneyinst.zip">архив</a>. Распакуйте и загрузите на сервер в корень сайта папку "moneyinst".</li>
       <li>Добавьте ссылку на скрипт в хеадер вашего сайт.
@@ -181,6 +183,25 @@
           <li>обратите внимание что ссылка должна содержать класс "mi-download-link"</li>
         </ul>
         <div class="info">Для того что б самому задать имя скачиваемого файла добавьте параметр: <strong>download_name="имя_файла.расширение"</strong></div>
+      </li>
+    </ol>
+  </div>
+  <div id="univarsal-php-clear">
+    <h3>Универсальный скрипт для подмены ссылок (PHP)</h3>
+    <ol>
+      <li>Скачайте <a href="files/php-clear/moneyinst.zip">архив</a>. Распакуйте, откройте в блокноте и исправьте значение переменной $sid на ваше (2-я строчка). Загрузите на сервер исправленный скрипт.</li>
+      <li>Ссылка на скачиваемый файл должна иметь следующий вид:
+        <div class="code">&lt;a href="/путь_к_папке_куда_закачали_скрипт/download.php?file=(1)" ...</div>
+        <ul>
+          <li>(1) - закодированная в base64 ссылка на скачиваемый файл (при открытии этой ссылки в браузере происходит загрузка оригинального файла).</li>
+        </ul>
+        <div class="info">Для того что б самому задать имя скачиваемого файла добавьте параметр: <strong>name="имя_файла.расширение"</strong> Т.е. ссылка примет следующий вид:
+          <div class="code">&lt;a href="/путь_к_папке_куда_закачали_скрипт/download.php?file=(1)&name=(2)" ...</div>
+          <ul>
+            <li>(1) - закодированная в base64 ссылка на скачиваемый файл (при открытии этой ссылки в браузере происходит загрузка оригинального файла).</li>
+            <li>(2) - закодированное в base64 имя файла с расширением (например: archive.rar).</li>
+          </ul>
+        </div>
       </li>
     </ol>
   </div>
