--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <head><meta charset="UTF-8"><title>FAQ</title></head>
 <body>
   <ul>
+    <li><a href="#site-id">Айди вашего сайта</a>
     <li><a href="#wp">Установка и настройка плагина WordPress</a>
     </li>
     <li><a href="#joomla">Установка и настройка плагина Joomla!</a>
@@ -17,6 +18,11 @@
     <li><a href="#univarsal-php-clear">Универсальный скрипт подмены ссылок (PHP)</a>
     </li>
   </ul>
+  <div id="site-id">
+    <h3>Айди вашего сайта</h3>
+    Что бы узнать айди сайта, зайдите в раздел <a href="/sites/">сайты</a>. Айди - это число в первой колонке.
+    <br>
+  </div>
   <div id="wp">
     <h3>Установка и настройка плагина WordPress</h3>
     <ol>
